fix: rating alignment fix in responsive view

--- a/src/app/_samples/mediaco/components/list-view/list-view.component.scss
+++ b/src/app/_samples/mediaco/components/list-view/list-view.component.scss
@@ -129,6 +129,7 @@ $primary-purple: #9c27b0;
 .star {
   filter: brightness(0) saturate(100%) invert(60%) sepia(92%) saturate(748%) hue-rotate(1deg) brightness(101%);
   height: 16px;
+  margin-right: 5px;
 }
 
 .dot {
